# s3-log-compressor

./: .gitignore  README.md  build-lambda.sh  example-event.json  example_manifest.txt  samconfig.toml  template.yaml
.github/workflows/: build-and-release.yml
dev/: cost_analysis.py  create_layer.sh  generate_manifest.py  manifest.txt  mock.py  requirements.txt  upload_to_s3.py  verify_mock_files.py  visualize_benchmark.py
events/: compress-event.json  decompress-event.json  orchestrator-event.json
rust-benchmark/: Cargo.toml
rust-benchmark/src/: main.rs
rust-compressor/: Cargo.toml
rust-compressor/src/: main.rs
rust-orchestrator/: Cargo.toml
rust-orchestrator/src/: main.rs
src/: app.py  benchmark.py
