[package]
name = "rust-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8"
aws-sdk-s3 = "1.96"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lambda_runtime = "0.14"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
bytes = "1.5.0"
tokio-stream = "0.1.14"
async-stream = "0.3.5"
