[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8"
aws-sdk-lambda = "1.86"
aws-sdk-s3 = "1.96"
csv = "1.3"
futures = "0.3"
lambda_runtime = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
